[pom] Add jvmargs for tomcat 9 run